use popover for asset tooltip
Closes #2482

Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -954,13 +954,13 @@
         "asset_to_withdraw": "Anlage zur Auszahlung:",
         "asset_unavailable": "Das Gateway für %(asset)s ist nicht in Betrieb",
         "assets": {
-            "bit": "<br/>bit%(asset)s ist ein Derivat, das den echten Wert von %(backed)s verfolgt. Es ist 100% dezentralisiert, benötigt kein Vertrauen und wird durch eine Sicherheit auf der Blockchain in einem Smart Contrakt hinterlegt.",
-            "bitcny": "<br/><br/>bitCNY kann 1:1 zum echten Yuan ein- oder ausbezahlt werden, indem die Gateway des Magic Wallet Dienstes benutzt wird.  Mehr Informationen auf https://www.magicw.net/",
-            "bridge": "<br/><br/>The %(asset)s asset is backed 1:1 by real %(backed)s and can be deposited or withdrawn using the gateway service provided by CryptoBridge.",
-            "gdex": "<br/><br/>The %(asset)s asset is backed 1:1 by real %(backed)s and can be deposited or withdrawn using the gateway service provided by GDex.",
-            "open": "<br/><br/>Die %(asset)s Anlage ist 1:1 durch echte  %(backed)s hinterlegt und kann ein- oder ausgezahlt werden. Der Gateway-Dienst wird durch OpenLedger bereitgestellt",
-            "rudex": "",
-            "trade": "br/><br/>Die %(asset)s Anlage ist 1:1 durch echte  %(backed)s hinterlegt und kann ein- oder ausgezahlt werden. Der Gateway-Dienst wird durch Blocktrades bereitgestellt",
+            "bit": "bit%(asset)s ist ein Derivat, das den echten Wert von %(backed)s verfolgt. Es ist 100% dezentralisiert, benötigt kein Vertrauen und wird durch eine Sicherheit auf der Blockchain in einem Smart Contrakt hinterlegt.",
+            "bitcny": "bitCNY kann 1:1 zum echten Yuan ein- oder ausbezahlt werden, indem die Gateway des Magic Wallet Dienstes benutzt wird.  Mehr Informationen auf https://www.magicw.net/",
+            "bridge": "Die %(asset)s Anlage ist 1:1 durch echte  %(backed)s hinterlegt und kann ein- oder ausgezahlt werden. Der Gateway-Dienst wird durch CryptoBridge bereitgestellt",
+            "gdex": "Die %(asset)s Anlage ist 1:1 durch echte  %(backed)s hinterlegt und kann ein- oder ausgezahlt werden. Der Gateway-Dienst wird durch Gdex bereitgestellt",
+            "open": "Die %(asset)s Anlage ist 1:1 durch echte  %(backed)s hinterlegt und kann ein- oder ausgezahlt werden. Der Gateway-Dienst wird durch OpenLedger bereitgestellt",
+            "rudex": "Die %(asset)s Anlage ist 1:1 durch echte  %(backed)s hinterlegt und kann ein- oder ausgezahlt werden. Der Gateway-Dienst wird durch Rudex bereitgestellt",
+            "trade": "Die %(asset)s Anlage ist 1:1 durch echte  %(backed)s hinterlegt und kann ein- oder ausgezahlt werden. Der Gateway-Dienst wird durch Blocktrades bereitgestellt",
             "win": "",
             "xbts": ""
         },
