--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -954,13 +954,13 @@
         "asset_to_withdraw": "Актив для вывода:",
         "asset_unavailable": "Шлюз для %(asset)s в данный момент не работает",
         "assets": {
-            "bit": "<br/>Bit%(asset)s - это производное, которое отслеживает реальную стоимость %(backed)s. Он на 100%% децентрализован, не требует доверия и обеспечен залогом, удерживаемым блокчейном в виде смарт-контракта.",
-            "bitcny": "<br/><br/>bitCNY может быть депонирован или выведен в соотношении 1:1 к реальному Юаню с помощью сервиса шлюза от Magic Wallet. Подробную информацию можно найти здесь https://www.magicw.net/",
-            "bridge": "<br/><br/> Актив %(asset)s обеспечен в соотношении 1:1 реальными %(backed)s и может быть размещен в депозите или выведен через шлюз, предоставляемый CryptoBridge.",
-            "gdex": " <br/><br/> Актив %(asset)s обеспечен в соотношении 1:1 реальными %(backed)s и может быть размещен в депозите или выведен через шлюз, предоставляемый GDex.",
-            "open": "<br/><br/>Актив %(asset)s обеспечивается реальными %(backed)s в соотношении 1:1 и может быть депонирован или выведен с помощью сервиса шлюза от Openledger.",
-            "rudex": "",
-            "trade": "<br/><br/>Актив %(asset)s обеспечивается реальными %(backed)s в соотношении 1:1 и может быть депонирован или выведен с помощью сервиса шлюза от Blocktrades.",
+            "bit": "Bit%(asset)s - это производное, которое отслеживает реальную стоимость %(backed)s. Он на 100%% децентрализован, не требует доверия и обеспечен залогом, удерживаемым блокчейном в виде смарт-контракта.",
+            "bitcny": "bitCNY может быть депонирован или выведен в соотношении 1:1 к реальному Юаню с помощью сервиса шлюза от Magic Wallet. Подробную информацию можно найти здесь https://www.magicw.net/",
+            "bridge": " Актив %(asset)s обеспечен в соотношении 1:1 реальными %(backed)s и может быть размещен в депозите или выведен через шлюз, предоставляемый CryptoBridge.",
+            "gdex": " Актив %(asset)s обеспечен в соотношении 1:1 реальными %(backed)s и может быть размещен в депозите или выведен через шлюз, предоставляемый GDex.",
+            "open": "Актив %(asset)s обеспечивается реальными %(backed)s в соотношении 1:1 и может быть депонирован или выведен с помощью сервиса шлюза от OpenLedger.",
+            "rudex": "Актив %(asset)s обеспечивается реальными %(backed)s в соотношении 1:1 и может быть депонирован или выведен с помощью сервиса шлюза от Rudex.",
+            "trade": "Актив %(asset)s обеспечивается реальными %(backed)s в соотношении 1:1 и может быть депонирован или выведен с помощью сервиса шлюза от Blocktrades.",
             "win": "",
             "xbts": ""
         },
