--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -414,6 +414,9 @@
         "understand": "Я понимаю",
         "ws_status": "Состояние подключения полного узла"
     },
+    "assets": {
+        "BTS": "BTS is the core token of the BitShares Blockchain"
+    },
     "boolean": {
         "false": "Неверно",
         "true": "Верно"
@@ -638,7 +641,9 @@
                 "chart_tools": "Отображает/скрывает левую и верхнюю панель инструментов, а также контекстное меню. Инструменты всегда скрыты в мини-экране.",
                 "chart_type": "Переключайтесь между глубиной рынка и ценовыми графиками, или отключите графики",
                 "chart_zoom": "Включите приближение графиков. Приближение всегда отключено на маленьких экранах.",
+                "decrease_chart_height": "Decrease the height of the chart",
                 "hide_function_buttons": "Скрыть все кнопки, которыми можно управлять из персонализированной формы",
+                "increase_chart_height": "Increase the height of the chart",
                 "market_location": "На какую сторону прикрепить вертикальный биржевой стакан. Это поменяет его местами с панелью рынка",
                 "market_trades": "",
                 "my_trades": "",
@@ -2128,6 +2133,7 @@
         "panel_hide": "Вы можете скрыть панель, чтобы освободить больше места",
         "personalize": "Измените схему размещения по умолчанию в настройках персонализации",
         "prev_label": "Назад",
+        "price_alerts": "Set alerts to get notifications if the price fluctuates",
         "price_chart": "Просмотр ценового действия актива с использованием ценового графика.",
         "restore_account": "Восстановите кошелек, используя резервный файл.",
         "sell_form": "Разместить заявки на продажу, используя эту форму.",
