--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -414,6 +414,9 @@
         "understand": "Verstanden",
         "ws_status": "Websocket Verbindungsstatus"
     },
+    "assets": {
+        "BTS": "BTS is the core token of the BitShares Blockchain"
+    },
     "boolean": {
         "false": "falsch",
         "true": "richtig"
@@ -638,7 +641,9 @@
                 "chart_tools": "Shows/Hides the left and top toolbar, as well as the context menu. Tools are always hidden in tiny screen.",
                 "chart_type": "Switch between market depth and price charts, or disable charts",
                 "chart_zoom": "Allow chart zooming. Zooming is always disabled in tiny screen.",
+                "decrease_chart_height": "Decrease the height of the chart",
                 "hide_function_buttons": "Hide all buttons that can be managed within the personalize form",
+                "increase_chart_height": "Increase the height of the chart",
                 "market_location": "Which side to pin the vertical order book on. This will switch place with market panel",
                 "market_trades": "",
                 "my_trades": "",
@@ -2128,6 +2133,7 @@
         "panel_hide": "You can hide the panel to have more room",
         "personalize": "Change the default layout in the personalize settings",
         "prev_label": "Zurück",
+        "price_alerts": "Set alerts to get notifications if the price fluctuates",
         "price_chart": "Anzeigen der Preisaktion eines Vermögenswerts mithilfe des Preistabellenfelds.",
         "restore_account": "Stellen Sie Ihre lokale Wallet mithilfe Ihrer Sicherungsdatei wieder her!",
         "sell_form": "Platzieren Sie Verkaufsaufträge mit diesem Formular!",
