--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -414,6 +414,9 @@
         "understand": "entiendo",
         "ws_status": "Estado de conexión de nodo completo"
     },
+    "assets": {
+        "BTS": "BTS is the core token of the BitShares Blockchain"
+    },
     "boolean": {
         "false": "Falso",
         "true": "Cierto"
@@ -638,7 +641,9 @@
                 "chart_tools": "Muestra / oculta la barra de herramientas superior e izquierda, así como el menú contextual. Las herramientas siempre están ocultas en minúscula pantalla.",
                 "chart_type": "Cambie entre la profundidad del mercado y los gráficos de precios, o desactive los gráficos",
                 "chart_zoom": "Permitir aumentar el grafico. El zoom siempre está deshabilitado en pantalla pequeña.",
+                "decrease_chart_height": "Decrease the height of the chart",
                 "hide_function_buttons": "Ocultar todos los botones que se pueden gestionar en el formulario de personalización.",
+                "increase_chart_height": "Increase the height of the chart",
                 "market_location": "En qué lado colocar el libro de órdenes vertical. Esto cambiará de lugar con el panel de mercado.",
                 "market_trades": "",
                 "my_trades": "",
@@ -2128,6 +2133,7 @@
         "panel_hide": "Puedes ocultar el panel para tener más espacio.",
         "personalize": "Cambia el diseño por defecto en la configuración de personalización",
         "prev_label": "Volver",
+        "price_alerts": "Set alerts to get notifications if the price fluctuates",
         "price_chart": "Ver la acción del precio de un activo usando el gráfico de precios.",
         "restore_account": "Restaure una billetera usando su archivo de respaldo.",
         "sell_form": "Coloque las órdenes de venta usando este formulario.",
