#1503 Fix balance error, fix quantity check

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1440,6 +1440,7 @@
             "urlNamed": "%(name)s should be url",
             "oneOf": "The field should be one of: %(list)s",
             "oneOfNamed": "%(name)s should be one of: %(list)s",
+            "balance": "Insufficient balance. Available only: %(balance)s",
 
             "test": ""
         }
