--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2104,12 +2104,12 @@
             "terms_and_conditions_accept":
                 "I have read and agree to the %(cryptobridge_terms_and_conditions)s",
             "terms_and_conditions_accept_disclaimer":
-                "I hearby renounce to my consumer right of revocation and acknowledge I can terminate the use of the service at anytime as described in §5.12 of CryptoBridge's Terms of Service",
+                "I hereby renounce to my consumer right of revocation and acknowledge I can terminate the use of the service at anytime as described in §5.9 of CryptoBridge's Terms of Service",
             "are_you_us_citizen": "Are you a U.S. citizen?",
             "kyc_info":
-                "Thank you for accepting our terms of service. To continue using the CryptoBridge gateway, you must complete a user verification process. Accepting this requirement will redirect you to our partner Fractal and upon completion your access to the full features of the gateway will be restored.",
+                "Thank you for accepting our Terms of Service. To continue using the CryptoBridge gateway, you must complete a user verification process. Accepting this requirement will redirect you to our partner, Fractal, and upon completion your access to the full features of the gateway will be restored.",
             "kyc_info_grace":
-                "Thank you for accepting our terms of service. To continue using the CryptoBridge gateway, you must complete a user verification process. There will be a grace period allowing those who do not consent to the verification process to withdraw their funds which ends on %(deadlineDate)s. Accepting this requirement will redirect you to our partner Fractal and upon completion your access to the full features of the gateway will be restored."
+                "Thank you for accepting our Terms of Service. To continue using the CryptoBridge gateway, you must complete a user verification process. There will be a grace period allowing those who do not consent to the verification process to withdraw their funds which ends on %(deadlineDate)s. Accepting this requirement will redirect you to our partner, Fractal, and upon completion your access to the full features of the gateway will be restored."
         },
         "dashboard": {
             "all_markets": "All Markets"
