--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -64,7 +64,7 @@
             "available": "Zur Beanspruchung verfügbar",
             "basic": "Grundmitglied",
             "cashback": "Skonto",
-            "claim": "Guthaben beanspruchen",
+            "claim": "Guthaben einfordern",
             "coindays": "Münztage",
             "earned": "Erworbene Münztage",
             "expires": "endet",
@@ -717,8 +717,8 @@
                 "title": "Collateral Bids"
             },
             "fee_pool": {
-                "claim_balance": "Gebührenguthaben beanspruchen",
-                "claim_fees": "Gebühren beanspruchen",
+                "claim_balance": "Gebührenguthaben einfordern",
+                "claim_fees": "Gebühren einfordern",
                 "claim_pool_text": "Der Eigentümer der Anlage kann mit diesem Formular Kapital vom Gebührenspeicher abheben:",
                 "claim_text": "Der Anlagen-Herausgeber kann die zusammengetragenen Anteile hier beanspruchen",
                 "core_exchange_rate": "Kernhandelsrate",
@@ -1194,7 +1194,7 @@
         "folder": "Konten",
         "hamburger": "Menü öffnen",
         "hamburger_x": "Menü schließen",
-        "hourglass": "Guthaben beanspruchen",
+        "hourglass": "Guthaben einfordern",
         "info_circle_o": "Info",
         "key": "Schlüssel",
         "list": "Weißliste",
