--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -1847,6 +1847,7 @@
         "latest_price": "Dies ist der letzte Preis, der im Markt gehandelt wurde.",
         "legacy_explanation": "Hides proposals that are duplicates, spam or have been started but not active for longer than 2 months.",
         "login": "%(wallet_name)s bietet keine gewöhnliche Anmeldung, sondern sperrt oder entsperrt eine Wallet (digitale Brieftasche), die <b>nur</b> lokal in Ihrem Browser gespeichert wird. <br/><br/> Nach jedem Schließen wird die Wallet automatisch gesperrt und Sie sind effektiv abgemeldet.",
+        "login_required": "Please login to the selected account to perform this action",
         "login-tooltip": {
             "incorrectPassword": {
                 "begin": "Enter another password or try ",
