--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -1847,6 +1847,7 @@
         "latest_price": "Este es el utlimo precio en el mercado.",
         "legacy_explanation": "Hides proposals that are duplicates, spam or have been started but not active for longer than 2 months.",
         "login": "Esta billetera de BitShares no ofrece un inicio de sesión tradicional sino que simplemente bloquea o desbloquea una billetera que es <b>solo</b> almacenada localmente en su navegador.<br/><br/> Cada vez que cierre la billetera, esta se bloqueará y se cerrerá efectivamente la sesión.",
+        "login_required": "Please login to the selected account to perform this action",
         "login-tooltip": {
             "incorrectPassword": {
                 "begin": "Ingrese otra contraseña o intente ",
