--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -1847,6 +1847,7 @@
         "latest_price": "Это самая актуальная цена для этого рынка.",
         "legacy_explanation": "Скрывает предложения, которые дублируются, являются спамом или не были активны более 2 месяцев с момента запуска.",
         "login": "Кошелек %(wallet_name)s не предоставляет возможности использования традиционного логина, но вместо этого просто открывает и закрывает кошелек, который хранится локально <b>только</b> в Вашем браузере.<br/><br/>Каждый раз, как Вы выходите из кошелька, он закрывается, и Вы выходите из аккаунта.",
+        "login_required": "Please login to the selected account to perform this action",
         "login-tooltip": {
             "incorrectPassword": {
                 "begin": "Введите другой пароль или попробуйте ",
