#1503 Display tooltip for not logged in users

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1454,6 +1454,7 @@
         "subject": "Subject"
     },
     "scaled_orders": {
+        "please_log_in": "You need to login before use Scaled Orders",
         "title": "Scaled Order",
         "price_lower": "Price Lower",
         "price_upper": "Price Upper",
